Added category section and changed the welcome page a bit.

--- a/welcome_page.html
+++ b/welcome_page.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/welcome_page.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
         <title>Welcome to InEd</title>
@@ -20,7 +21,7 @@
             <div class="section-content">
                 <h2>Start creating infographics now!</h2>
                 <h6>Press the button to select the type of infographic you want.</h6>
-                <a href="#" class="ghost-button">Step 1</a>
+                <a href="category_selection.html" class="ghost-button">Continue</a>
             </div>
         </div>
 
