Added icons to category selection.

--- a/category_selection.html
+++ b/category_selection.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/category_selection.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
+        <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">
         <title>Choose a category</title>
     </head>
     <body>
@@ -16,7 +17,7 @@
                 <div class="category">
                     <div class="square">
                         <div class="content">
-
+                            <i class="fa fa-pie-chart fa-5x" aria-hidden="true"></i>
                         </div>
                     </div>
                     <h6>Charts</h6>
@@ -25,7 +26,7 @@
                 <div class="category">
                     <div class="square">
                         <div class="content">
-
+                            <i class="fa fa-map fa-5x" aria-hidden="true"></i>
                         </div>
                     </div>
                     <h6>Maps</h6>
@@ -34,7 +35,7 @@
                 <div class="category">
                     <div class="square">
                         <div class="content">
-
+                            <i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
                         </div>
                     </div>
                     <h6>Graphs</h6>
@@ -43,7 +44,7 @@
                 <div class="category">
                     <div class="square">
                         <div class="content">
-
+                            <i class="fa fa-area-chart fa-5x" aria-hidden="true"></i>
                         </div>
                     </div>
                     <h6>Others</h6>
