Added action event on category clicked for map.

--- a/category_selection.html
+++ b/category_selection.html
@@ -14,7 +14,7 @@
             <div class="section-content">
                 <h2>Choose one of the following categories: </h2>
 
-                <div class="category">
+                <div class="category" id="chart">
                     <div class="square">
                         <div class="content">
                             <i class="fa fa-pie-chart fa-5x" aria-hidden="true"></i>
@@ -23,7 +23,7 @@
                     <h6>Charts</h6>
                 </div>
                 
-                <div class="category">
+                <div class="category" id="map">
                     <div class="square">
                         <div class="content">
                             <i class="fa fa-map fa-5x" aria-hidden="true"></i>
@@ -32,7 +32,7 @@
                     <h6>Maps</h6>
                 </div>
                 
-                <div class="category">
+                <div class="category" id="graph">
                     <div class="square">
                         <div class="content">
                             <i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
@@ -41,7 +41,7 @@
                     <h6>Graphs</h6>
                 </div>
 
-                <div class="category">
+                <div class="category" id="others">
                     <div class="square">
                         <div class="content">
                             <i class="fa fa-area-chart fa-5x" aria-hidden="true"></i>
@@ -54,5 +54,6 @@
 
             </div>
         </div>
+        <script src="js/category_selection.js"></script>
     </body>
 </html>
