--- a/input_selection.html
+++ b/input_selection.html
@@ -2,11 +2,26 @@
     <head>
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/category_selection.css">
+        <link rel="stylesheet" href="css/input_selection.css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
+        <title>Name the country</title>
     </head>
     <body>
         <div class="container">
             <div class="section-top">
                 <img class="logo" src='img/logo_ined.png'/>
+            </div>
+
+            <div class="section-content">
+                <h2>Type the name of the country: </h2>
+                <div class="large-form-input">
+                    <form autocomplete="off" action="#">
+                        <input type="text" name="input-selection" placeholder="Search" autofocus>
+                    </form>
+                    <a href="sub_category_selection.html" class="ghost-button inline-button">Back</a>
+                    <a href="#" class="ghost-button inline-button">Continue</a>
+                
+                </div>
             </div>
 
         </div>
