Solved minor bug causing a wrong redirect.

--- a/data_selection.html
+++ b/data_selection.html
@@ -22,12 +22,12 @@
 
                 <div class="data-content">
                 
-                    <div class="form-content">
+                    <div class="form-content" hidden>
                         <form action="#">
-                                <div class="form-group">
-                                    <label for="api">API URI Endpoint:</label>
-                                    <input type="text" class="required" id='api' name="api" autofocus>
-                                </div>
+                            <div class="form-group">
+                                <label for="api">API URI Endpoint:</label>
+                                <input type="text" class="required" id='api' name="api" autofocus>
+                            </div>
 
                         </form>
                     </div>
