Added PieChart generation

--- a/chart_editor.html
+++ b/chart_editor.html
@@ -12,8 +12,7 @@
             </div>
             <div class = "section-content">
                 <h3>Here is your result </h3>
-                <div class = "drawing-surface s square">
-                    <img src = "img/dummy_infographics/pie_dummy.png"/>
+                <div class = "drawing-surface square">
                     <canvas></canvas>
                 </div>
                 <div class = "editor-surface">
@@ -21,6 +20,8 @@
                 </div>
             </div>
         </div>
+        <script src="js/helpers_library.js"></script>
+        <script src="js/generators/pie_generator.js"></script>
         <script src="js/chart_editor.js"></script>
     </body>
 </html>
