Finsihed data selection page and created processing page.

--- a/category_selection.html
+++ b/category_selection.html
@@ -11,7 +11,7 @@
             <div class="section-top">
                 <img class="logo" src='img/logo_ined.png'/>
             </div>
-            <div class="section-content">
+            <div class="section-content-small">
                 <h2>Choose one of the following categories: </h2>
 
                 <div class="category" id="chart">
@@ -49,10 +49,13 @@
                     </div>
                     <h6>Others</h6>
                 </div>
-
-                <a href="welcome_page.html" class="ghost-button">Back</a>
-
+                
             </div>
+
+            <div class="navigation-buttons">
+                <a href="welcome_page.html" class="ghost-button">Back</a>
+            </div>
+
         </div>
         <script src="js/category_selection.js"></script>
     </body>
