--- a/input_selection.html
+++ b/input_selection.html
@@ -12,7 +12,7 @@
                 <img class="logo" src='img/logo_ined.png'/>
             </div>
 
-            <div class="section-content">
+            <div class="section-content-small">
                 <h2 id='input-message'></h2>
                 <div class="large-form-input">
 
@@ -20,10 +20,14 @@
                         <input type="text" id='search' name="search" placeholder="Search" autofocus>
                     </form>
                 
-                    <a href="sub_category_selection.html" class="ghost-button inline-button">Back</a>
-                    <a href="data_selection.html" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
+                    
                     <h6 class="validation-text" id="validation-text"></h3>
                 </div>
+            </div>
+
+            <div class="navigation-buttons">
+                <a href="sub_category_selection.html" class="ghost-button inline-button">Back</a>
+                <a href="data_selection.html" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
             </div>
 
         </div>
