--- a/sub_category_selection.html
+++ b/sub_category_selection.html
@@ -10,7 +10,7 @@
             <div class="section-top">
                 <img class="logo" src='img/logo_ined.png'/>
             </div>
-            <div class="section-content">
+            <div class="section-content-small">
                 <h2>Choose the type of map you want: </h2>
 
                 <div class="category" id="map-continent">
@@ -31,8 +31,11 @@
                     <h6>Country</h6>
                 </div>
 
-                <a href="category_selection.html" class="ghost-button">Back</a>
+                
 
+            </div>
+            <div class="navigation-buttons">
+                <a href="category_selection.html" class="ghost-button">Back</a>
             </div>
         </div>
         <script src="js/category_selection.js"></script>
