Changed the layout of the chart editor page.

--- a/chart_editor.html
+++ b/chart_editor.html
@@ -1,23 +1,25 @@
 <html>
     <head>
-        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/layout_chart_editor.css">
         <link rel="stylesheet" href="css/chart_editor.css">        
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
         <title>Edit your chart</title>
     </head>
     <body>
         <div class="container">
-            <div class="section-top">
-                <img class="logo" src='img/logo_ined.png'/>
-            </div>
-            <div class = "section-content">
-                <h3>Here is your result </h3>
+           <div class="menu-bar">
+
+           </div>
+            
+            <div class = "content-drawing">
+
                 <div class = "drawing-surface square">
-                    <canvas></canvas>
                 </div>
-                <div class = "editor-surface">
-                    <h4>Chart Editor</h4>
-                </div>
+
+            </div>
+
+            <div class = "content-edit">
+                <h4>Chart Editor</h4>
             </div>
         </div>
         <script src="js/helpers_library.js"></script>
