Made background image stop repeating and scale nicely.

--- a/chart_editor.html
+++ b/chart_editor.html
@@ -21,14 +21,11 @@
                 <li><a href="#">Change</a></li>
                 <li style="float:right"><a href="#about">Export</a></li>
                 <li style="float:right"><a href="#about">Data</a></li>
+                <li style="float:right"><a href="#about">Restart</a></li>
             </ul>
         </div>
 
-        <div class="content-drawing">
-
-            <div class="drawing-surface square">
-            </div>
-
+        <div class="drawing-surface">
         </div>
 
         <div class="content-edit">
