--- a/chart_editor.html
+++ b/chart_editor.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/layout_chart_editor.css">
-    <link rel="stylesheet" href="css/chart_editor.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
     <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">
     <title>Edit your chart</title>
