--- a/framework.html
+++ b/framework.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/chart_editor.css">        
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
+            <script src="js/helpers_library.js"></script>
         <title>Edit your chart</title>
     </head>
     <body>
