--- a/ined.html
+++ b/ined.html
@@ -5,13 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome to InEd</title>
         <!-- Stylesheets -->
+        <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/ined.css">
-        <link rel="stylesheet" href="css/welcome_page.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
         <link rel="stylesheet" href="css/category_selection.css">
         <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/layout_chart_editor.css">
-        <link rel="stylesheet" href="css/category_selection.css">        
+        <link rel="stylesheet" href="css/layout_chart_editor.css">     
         <!-- Scripts-->  
 
         <script src="js/accordion_menu.js"></script>
@@ -26,9 +25,11 @@
                 <img class="logo" src='img/logo_ined.png'/>
             </div>
             <div class="section-content">
-                <h2>Start creating infographics now!</h2>
-                <h6>Press the button to select the type of infographic you want.</h6>
-                <a id = "goToCategorySelection" class = "ghost-button">Continue</a>
+                <div id = "start-page">
+                    <h2>Start creating infographics now!</h2>
+                    <h6>Press the button to select the type of infographic you want.</h6>
+                    <a id = "goToCategorySelection" class = "ghost-button">Continue</a>
+                </div>
             </div>
         </div>
 
