--- a/sub_category_selection.html
+++ b/sub_category_selection.html
@@ -1,24 +1,23 @@
-<div class="section-content-small">
+<div id = "sub-category-selection-page">
     <h2>Choose the type of map you want: </h2>
-
-    <div class="category" id="map-continent">
-        <div class="square">
-            <div class="content">
-                <img src="img/eu.png" style="width: 100%; height: 100%" alt="Europe"/>
+    <div class="categories">
+        <div class="category" id="map-continent">
+            <div class="square">
+                <div class="content">
+                    <img src="img/eu.png" style="width: 100%; height: 100%" alt="Europe"/>
+                </div>
             </div>
+            <h6>Continent</h6>
         </div>
-        <h6>Continent</h6>
-    </div>
 
-    <div class="category" id="map-country">
-        <div class="square">
-            <div class="content">
-                <img src="img/us.png" style="width: 100%; height: 100%" alt="United States of America"/>
+        <div class="category" id="map-country">
+            <div class="square">
+                <div class="content">
+                    <img src="img/us.png" style="width: 100%; height: 100%" alt="United States of America"/>
+                </div>
             </div>
+            <h6>Country</h6>
         </div>
-        <h6>Country</h6>
     </div>
-
-    <a href="category_selection.html" class="ghost-button">Back</a>
-
+<a href="category_selection.html" class="ghost-button">Back</a>
 </div>
