--- a/category_selection.html
+++ b/category_selection.html
@@ -4,7 +4,7 @@
         <div class="category" id="chart">
             <div class="square">
                 <div class="content">
-                    <i class="fa fa-pie-chart" aria-hidden="true"></i>
+                    <i class="fa fa-pie-chart fa-custom" aria-hidden="true"></i>
                 </div>
             </div>
             <h6>Charts</h6>
@@ -13,7 +13,7 @@
         <div class="category" id="map">
             <div class="square">
                 <div class="content">
-                    <i class="fa fa-map" aria-hidden="true"></i>
+                    <i class="fa fa-map fa-custom" aria-hidden="true"></i>
                 </div>
             </div>
             <h6>Maps</h6>
@@ -22,7 +22,7 @@
         <div class="category" id="graph">
             <div class="square">
                 <div class="content">
-                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                    <i class="fa fa-bar-chart fa-custom" aria-hidden="true"></i>
                 </div>
             </div>
             <h6>Graphs</h6>
@@ -31,7 +31,7 @@
         <div class="category" id="others">
             <div class="square">
                 <div class="content">
-                    <i class="fa fa-area-chart" aria-hidden="true"></i>
+                    <i class="fa fa-area-chart fa-custom" aria-hidden="true"></i>
                 </div>
             </div>
             <h6>Others</h6>
