Repaired some broken pages by mocking the way a multi page application would work (loading and unloading assets)

--- a/chart_editor_content.html
+++ b/chart_editor_content.html
@@ -1,29 +1,50 @@
-<div class="drawing-surface">
-</div>
-
-<div class="content-edit">
-    <div class="content-edit-header">
-        <div class="collapse-div">
-            <h2><i class="fa fa-bars" aria-hidden="true"></i></h2>
+<div class = "chart-editor">
+    <div class = "section-top">
+        <div class="menu-bar">
+            <ul>
+                <li>
+                    <a class="nohover" href="welcome_page.html">
+                        <img class="logo" src='img/logo_ined.png'/>
+                    </a>
+                </li>
+                <li><a class="active" href="#">Design</a></li>
+                <li><a href="#">Change</a></li>
+                <li style="float:right"><a href="#about">Export</a></li>
+                <li style="float:right"><a href="#about">Data</a></li>
+                <li style="float:right"><a href="#about">Restart</a></li>
+            </ul>
         </div>
-        <div class="column-title">
-            <h2>Editor</h2>
-        </div>
-
     </div>
+    <div class = "section-bottom">
+        <div class = "section-bottom-content">
+            <div class="drawing-surface">
+            </div>
 
-    <button class="accordion">Data</button>
+            <div class="content-edit">
+                <div class="content-edit-header">
+                    <div class="collapse-div">
+                        <h2><i class="fa fa-bars" aria-hidden="true"></i></h2>
+                    </div>
+                    <div class="column-title">
+                        <h2>Editor</h2>
+                    </div>
 
-    <div class="panel" id = 'data-panel'>
-        <p>Lorem ipsum...</p>
-    </div>
+                </div>
 
-    <button class="accordion">Properties</button>
-    <div class="panel" id = 'properties-panel'>
-    </div>
+                <button class="accordion">Data</button>
 
-    <button class="accordion">Settings</button>
-    <div class="panel" id = 'settings-panel'>
-        <p>Lorem ipsum...</p>
+                <div class="panel" id = 'data-panel'>
+                    <p>Lorem ipsum...</p>
+                </div>
+
+                <button class="accordion">Properties</button>
+                <div class="panel" id = 'properties-panel'>
+                </div>
+
+                <button class="accordion">Settings</button>
+                <div class="panel" id = 'settings-panel'>
+                    <p>Lorem ipsum...</p>
+                </div>
+            </div>
     </div>
 </div>
