--- a/ined.html
+++ b/ined.html
@@ -8,9 +8,7 @@
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/ined.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:lighter">
-        <link rel="stylesheet" href="css/category_selection.css">
-        <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/layout_chart_editor.css">     
+        <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">     
         <!-- Scripts-->  
 
         <script src="js/accordion_menu.js"></script>
@@ -20,12 +18,12 @@
 
     </head>
     <body>
-        <div class="container">
+        <div id = "start-page" class = "layout-background">
             <div class="section-top">
                 <img class="logo" src='img/logo_ined.png'/>
             </div>
-            <div class="section-content">
-                <div id = "start-page">
+            <div class="section-bottom">
+                <div class = "section-bottom-content">
                     <h2>Start creating infographics now!</h2>
                     <h6>Press the button to select the type of infographic you want.</h6>
                     <a id = "goToCategorySelection" class = "ghost-button">Continue</a>
