--- a/input_selection.html
+++ b/input_selection.html
@@ -28,7 +28,7 @@
                     
                     <h6 class="validation-text" id="validation-text"></h3>
                 </div>
-                <a href="sub_category_selection.html" class="ghost-button inline-button">Back</a>
+                <a href="javascript:template.goBack()" class="ghost-button inline-button">Back</a>
                 <a href="data_selection.html" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
             </div>
 
