Added cursor pointer on some elements and made subcategory work with SPA template.

--- a/sub_category_selection.html
+++ b/sub_category_selection.html
@@ -23,6 +23,6 @@
                 <h6>Country</h6>
             </div>
         </div>
-        <a href="category_selection.html" class="ghost-button">Back</a>
+        <a href="window.history.back()" class="ghost-button">Back</a>
     </div>
 </div>
