Started working on applying html5 history API

--- a/category_selection.html
+++ b/category_selection.html
@@ -42,7 +42,7 @@
                     <h6>Others</h6>
                 </div>
             </div>
-            <a href = "ined.html" class="ghost-button">Back</a>
+            <a class="ghost-button">Back</a>
         </div>
     </div>
 </div>
