--- a/ined.html
+++ b/ined.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Welcome to InEd</title>
+        <title>InEd</title>
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/ined.css">
@@ -11,29 +12,14 @@
         <link rel="stylesheet" href="res/font-awesome/css/font-awesome.min.css">     
         <!-- Scripts-->  
 
-        <script src="js/accordion_menu.js"></script>
+        <!-- <script src="js/accordion_menu.js"></script> -->
         <script src="js/helpers_library.js"></script>
-<!--         <script src = "js/generators/pie_generator.js"></script> -->
-<!--         <script src = "js/chart_editor.js"></script> -->
 
     </head>
-    <body>
-        <div id = "start-page" class = "layout-background">
-            <div class="section-top">
-                <img class="logo" src='img/logo_ined.png'/>
-            </div>
-            <div class="section-bottom">
-                <div class = "section-bottom-content">
-                    <h2>Start creating infographics now!</h2>
-                    <h6>Press the button to select the type of infographic you want.</h6>
-                    <a id = "goToCategorySelection" class = "ghost-button">Continue</a>
-                </div>
-            </div>
-        </div>
 
+    <body>
     </body>
 
     <script src = "js/template.js"></script>
-    <script src = "js/ined.js"></script>
 
 </html>
