Implemented the HTML5 history API for the back navigation buttons.

--- a/input_selection.html
+++ b/input_selection.html
@@ -13,7 +13,7 @@
             
             <h6 class="validation-text" id="validation-text"></h3>
         </div>
-        <a href="window.history.back()" class="ghost-button inline-button">Back</a>
+        <a href="javascript:template.goBack()" class="ghost-button inline-button back-button">Back</a>
         <a href="data_selection.html" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
     </div>
 </div>
