--- a/sub_category_selection.html
+++ b/sub_category_selection.html
@@ -23,6 +23,6 @@
                 <h6>Country</h6>
             </div>
         </div>
-        <a href="window.history.back()" class="ghost-button">Back</a>
+        <a href="javascript:template.goBack()" class="ghost-button back-button">Back</a>
     </div>
 </div>
