--- a/category_selection.html
+++ b/category_selection.html
@@ -42,7 +42,7 @@
                     <h6>Others</h6>
                 </div>
             </div>
-            <a class="ghost-button">Back</a>
+            <a href="javascript:template.goBack()" class="ghost-button">Back</a>
         </div>
     </div>
 </div>
