--- a/data_selection.html
+++ b/data_selection.html
@@ -6,19 +6,19 @@
         <div class = "section-bottom-data-selection">
             <div class="data-type">
                 <h3>Select the data source</h3>
-                <a href="#" id='api' class="ghost-button nohover inline-button radio-button">API</a>
-                <a href="#" id='csv' class="ghost-button nohover inline-button radio-button">CSV/XLS</a>
-                <a href="#" id='json' class="ghost-button nohover inline-button radio-button">JSON</a>
+                <a id='api' class="ghost-button nohover inline-button radio-button">API</a>
+                <a id='csv' class="ghost-button nohover inline-button radio-button">CSV/XLS</a>
+                <a id='json' class="ghost-button nohover inline-button radio-button">JSON</a>
             </div>
 
             <div class="data-content">
                 
                 <div class = "forms">
                     <div class="form-content" id="api-form">
-                            <div class="form-group">
-                                <label for="api">API URI Endpoint:</label>
-                                <input type="text" class="required line-input" id='api' name="api" autofocus>
-                            </div>
+                        <div class="form-group">
+                            <label for="api">API URI Endpoint:</label>
+                            <input type="text" class="required line-input" id='api' name="api" autofocus>
+                        </div>
                     </div>
 
                     <div class="form-content" id="csv-form">
@@ -39,7 +39,7 @@
                 <p id = "upload-error-message"></p>
 
                 <div class="nav-buttons">
-                    <a id="back-to-category-selection" class="ghost-button inline-button">Back</a>
+                    <a href="javascript:template.goBack()" id="back-to-category-selection" class="ghost-button inline-button back-button">Back</a>
                     <a id="upload-data-button" class="ghost-button inline-button">Submit</a> 
                 </div>   
             </div>
