Fixed background image and mode input selection page work.

--- a/ined.html
+++ b/ined.html
@@ -17,9 +17,9 @@
 
     </head>
 
-    <body>
-    </body>
+    <body></body>
 
+    <script src = "js/metadata.js"></script>
     <script src = "js/template.js"></script>
 
 </html>
