--- a/input_selection.html
+++ b/input_selection.html
@@ -14,6 +14,6 @@
             <h6 class="validation-text" id="validation-text"></h3>
         </div>
         <a href="javascript:template.goBack()" class="ghost-button inline-button back-button">Back</a>
-        <a href="data_selection.html" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
+        <a href="javascript:goToDataSelection()" onclick="return validateFormInput();" class="ghost-button inline-button" id="continue-button">Continue</a>
     </div>
 </div>
