Added option to fill metadata information.

--- a/ined.html
+++ b/ined.html
@@ -14,12 +14,12 @@
 
         <!-- <script src="js/accordion_menu.js"></script> -->
         <script src="js/helpers_library.js"></script>
+        <script src = "js/data.js"></script>
 
     </head>
 
     <body></body>
 
-    <script src = "js/metadata.js"></script>
     <script src = "js/template.js"></script>
 
 </html>
