--- a/sub_category_selection.html
+++ b/sub_category_selection.html
@@ -5,7 +5,7 @@
     <div class = "section-bottom">
         <h2>Choose the type of map you want: </h2>
         <div class="categories">
-            <div class="category" id="map-continent">
+            <div class="category subcategory" id="map-continent">
                 <div class="square">
                     <div class="content">
                         <img src="img/eu.png" style="width: 100%; height: 100%" alt="Europe"/>
@@ -14,7 +14,7 @@
                 <h6>Continent</h6>
             </div>
 
-            <div class="category" id="map-country">
+            <div class="category subcategory" id="map-country">
                 <div class="square">
                     <div class="content">
                         <img src="img/us.png" style="width: 100%; height: 100%" alt="United States of America"/>
