--- a/infographic_editor.html
+++ b/infographic_editor.html
@@ -1,4 +1,4 @@
-<div class = "chart-editor">
+<div id = "infographic-editor">
     <div class = "section-top">
         <div class="menu-bar">
             <ul>
@@ -9,46 +9,23 @@
                 </li>
                 <li><a class="active" href="#">Design</a></li>
                 <li><a href="#">Change</a></li>
-                <li style="float:right"><a href="#about">Export</a></li>
+                <li style="float:right"><a id = "export-draw">Export</a></li>
                 <li style="float:right"><a href="#about">Data</a></li>
-                <li style="float:right"><a href="#about">Restart</a></li>
+                <li style="float:right"><a href="#restart-draw">Restart</a></li>
             </ul>
         </div>
     </div>
     <div class = "section-bottom">
         <div class = "section-bottom-content">
-            <canvas id = "canvas" height="1400" width="1400">
+            <canvas id = "print-canvas" height="1400" width="1400">
             </canvas>
-            <div class="drawing-surface">
+            <div class = "drawing-surface">
+                <div class = "drawing-surface-fade">
+                </div>
+                <div class = "drawing-surface-content">
+                </div>
             </div>
-            <div class="drawing-text">
-                <p> Audi</p>
-            </div>
-            <div class="content-edit">
-                <div class="content-edit-header">
-                    <div class="collapse-div">
-                        <h2><i class="fa fa-bars" aria-hidden="true"></i></h2>
-                    </div>
-                    <div class="column-title">
-                        <h2>Editor</h2>
-                    </div>
-
-                </div>
-
-                <button class="accordion">Data</button>
-
-                <div class="panel" id = 'data-panel'>
-                    <p>Lorem ipsum...</p>
-                </div>
-
-                <button class="accordion">Properties</button>
-                <div class="panel" id = 'properties-panel'>
-                </div>
-
-                <button class="accordion">Settings</button>
-                <div class="panel" id = 'settings-panel'>
-                    <button id = "download">Download</button>
-                </div>
+            <div class = "data-editor">
             </div>
     </div>
 </div>
