Added a new page for chart type selection,refactored css

--- a/infographic_editor.html
+++ b/infographic_editor.html
@@ -10,7 +10,7 @@
                 <li><a class="active" href="#">Design</a></li>
                 <li><a href="#">Change</a></li>
                 <li style="float:right"><a id = "export-draw">Export</a></li>
-                <li style="float:right"><a href="#about">Data</a></li>
+                <li style="float:right"><a id = "edit-data-button">Data</a></li>
                 <li style="float:right"><a href="#restart-draw">Restart</a></li>
             </ul>
         </div>
