Pie generator works with /completeInformation,svg resizing

--- a/infographic_editor.html
+++ b/infographic_editor.html
@@ -3,7 +3,7 @@
         <div class="menu-bar">
             <ul>
                 <li>
-                    <a class="nohover" href="welcome_page.html">
+                    <a class="nohover" href="ined.html">
                         <img class="logo" src='img/logo_ined.png'/>
                     </a>
                 </li>
