Added dynamic tooltip generation from js and added new mock data and new map svgs

--- a/data_type_selection.html
+++ b/data_type_selection.html
@@ -7,7 +7,7 @@
         <div class="type-selection">
             <a class="type-button ghost-button">Population</a>
             <a class="type-button ghost-button">Percentage</a>
-            <a class="type-button ghost-button">Simple</a>
+            <a class="type-button ghost-button">Discrete</a>
         </div>
         <div class="nav-buttons">
             <a href="javascript:template.goBack()" class="ghost-button">Back</a>
