--- a/infographic_editor.html
+++ b/infographic_editor.html
@@ -7,11 +7,9 @@
                         <img class="logo" src='img/logo_ined.png'/>
                     </a>
                 </li>
-                <li><a class="active" href="#">Design</a></li>
-                <li><a href="#">Change</a></li>
-                <li style="float:right"><a id = "export-draw">Export</a></li>
+                <li style="float:right"><a id = "export-draw-button">Export</a></li>
                 <li style="float:right"><a id = "edit-data-button">Data</a></li>
-                <li style="float:right"><a href="#restart-draw">Restart</a></li>
+                <li style="float:right"><a id ="restart-draw-button">Restart</a></li>
             </ul>
         </div>
     </div>
