Added zoom option on x axis.

--- a/test_line_graph/canvas.html
+++ b/test_line_graph/canvas.html
@@ -15,9 +15,13 @@
                 stroke-width: 1; 
             }
         </style>
+        <button type="button" onclick="zoomInGraph()" id = "zoomin">+</button>
+        <button type="button" id = "zoomout" onclick="zoomOutGraph()">-</button>
         <div class="drawing-board">
 
         </div>
+        
+        
         <script src = "graph_generator.js"></script>
 
     </body>
