Added video to documentation

--- a/Documentation/scholary.html
+++ b/Documentation/scholary.html
@@ -53,7 +53,7 @@
 				<p>Aceasta primeste de la utilizator o sursa de date, care poate fi vizualizata in functie de preferintele utilizatorului, iar mai apoi descarcata intr-un format PNG sau SVG.</p>
 				<p>Utilizatorul va putea efectua diverse modificari asupra fiecarui tip de grafic disponibil.Ii va putea schimba culorile, sau modul in care sunt afisate datele prin reprezentarea acestora.</p>
 				
-				<p><a href="https://vimeo.com/">Filmuleț demonstrativ.</a></p>
+				<p><a href="https://vimeo.com/253348070">Filmuleț demonstrativ.</a></p>
 	</section>
 	<section typeof="sa:MaterialsAndMethods">
       <h2>Design General</h2>
