--- a/ined.html
+++ b/ined.html
@@ -13,6 +13,7 @@
         <!-- Scripts-->  
 
         <!-- <script src="js/accordion_menu.js"></script> -->
+        <script src="js/libraries/canvg.min.js"></script>
         <script src="js/helpers_library.js"></script>
         <script src = "js/data.js"></script>
 
