--- a/infographic_editor.html
+++ b/infographic_editor.html
@@ -15,9 +15,9 @@
     </div>
     <div class = "section-bottom">
         <div class = "section-bottom-content">
-            <canvas id = "print-canvas" height="100%" width="100%">
-            </canvas>
             <div class = "drawing-surface">
+                <canvas id = "print-canvas" height="100%" width="100%" style="display: none">
+                </canvas>
                 <div class = "drawing-surface-fade">
                 </div>
                 <div class = "drawing-surface-content">
